--- a/blocks/page/page.css
+++ b/blocks/page/page.css
@@ -2,4 +2,5 @@
   width: 100%;
   margin: 0 auto;
   color: #e5e5e5;
+  overflow: hidden;
 }
