--- a/pages/fonts.css
+++ b/pages/fonts.css
@@ -1,10 +1,19 @@
-
 html {
   font-family: Inter, sans-serif;
 }
 
 @font-face {
   font-family: "Inter";
-  src: url("../../Inter-3.15/Inter\ Web/inter");
-  font-style: normal;
+  src: url(../../Inter-3.15/Inter\ Web/inter-Regular.woff2);
+  font-style: 400;
+}
+@font-face {
+  font-family: "Inter";
+  src: url(../../Inter-3.15/Inter\ Web/inter-Black.woff2);
+  font-weight: 900;
+}
+@font-face {
+  font-family: "Inter";
+  src: url(../../Inter-3.15/Inter\ Web/inter-Bold.woff2);
+  font-weight: 700;
 }
